# ocr-triage

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tr.md
.github/workflows/: ci.yml
examples/: bench.rs  bench_breakdown.rs  bench_pixels.rs  gen_a4_png.rs  gen_negatives.rs  probe_accuracy.rs  probe_dc.rs  probe_formats.rs  probe_jpeg_scale.rs  probe_png.rs  probe_png_ab.rs  probe_png_phases.rs
src/: config.rs  decode.rs  jpeg_dc.rs  lib.rs  score.rs  simd.rs
tests/: sanity.rs
