[package]
name = "ocr-triage"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = [
    "Hasan Salihoğlu <hsn.salihoglu@gmail.com>",
    "Claude (Opus 4.6) <noreply@anthropic.com>",
]
description = "Sub-millisecond binary classifier: does this image contain text? Language- and format-agnostic OCR gatekeeper."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hasantr/ocr-triage"
homepage = "https://github.com/hasantr/ocr-triage"
documentation = "https://docs.rs/ocr-triage"
keywords = ["ocr", "image", "text-detection", "triage", "classifier"]
categories = ["computer-vision", "multimedia::images"]

[lib]
path = "src/lib.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "bmp"] }
zune-jpeg = "0.5"
zune-core = "0.5"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[[example]]
name = "bench"
path = "examples/bench.rs"

[[example]]
name = "gen_negatives"
path = "examples/gen_negatives.rs"

[[example]]
name = "bench_pixels"
path = "examples/bench_pixels.rs"
