[package]
name = "ocr-triage"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
authors = [
    "Hasan Salihoğlu <hsn.salihoglu@gmail.com>",
    "Claude (Opus 4.6) <noreply@anthropic.com>",
]
description = "Sub-millisecond binary classifier: does this image contain text? Language- and format-agnostic OCR gatekeeper."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hasantr/ocr-triage"
homepage = "https://github.com/hasantr/ocr-triage"
documentation = "https://docs.rs/ocr-triage"
keywords = ["ocr", "image", "text-detection", "triage", "classifier"]
categories = ["computer-vision", "multimedia::images"]

[lib]
path = "src/lib.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "webp", "tiff", "bmp", "gif"] }
jpeg-decoder = "0.3"
zune-png = "0.5"
zune-core = "0.5"
# `flate2` transitive olarak `png` crate üstünden geliyor. Burada explicit
# dep + `zlib-rs` feature açmak, dep graph'ındaki tüm flate2 tüketicilerini
# (özellikle image crate'in PNG decode'u) pure-Rust zlib-ng portuna yönlendirir.
# miniz_oxide'tan ~2-3× hız kazancı A4 PNG inflate'inde.
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[[example]]
name = "bench"
path = "examples/bench.rs"

[[example]]
name = "gen_negatives"
path = "examples/gen_negatives.rs"

[[example]]
name = "bench_pixels"
path = "examples/bench_pixels.rs"

[[example]]
name = "bench_breakdown"
path = "examples/bench_breakdown.rs"

[[example]]
name = "probe_jpeg_scale"
path = "examples/probe_jpeg_scale.rs"

[[example]]
name = "probe_png_phases"
path = "examples/probe_png_phases.rs"

[[example]]
name = "probe_dc"
path = "examples/probe_dc.rs"

[[example]]
name = "gen_a4_png"
path = "examples/gen_a4_png.rs"

[[example]]
name = "probe_png"
path = "examples/probe_png.rs"

[[example]]
name = "probe_png_ab"
path = "examples/probe_png_ab.rs"

[[example]]
name = "probe_formats"
path = "examples/probe_formats.rs"

[[example]]
name = "probe_accuracy"
path = "examples/probe_accuracy.rs"
